--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-player": "^2.12.0",
+    "sqlite": "^4.1.2",
+    "sqlite3": "^5.1.4",
     "typescript": "4.9.5"
   },
   "devDependencies": {
